--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
   --primary-clr: #8B7E74;
   --bg-primary-clr: #65647C;
   --bg-secondary-clr: #504f62;
+  /* --primary-clr: #e85900;
+  --bg-primary-clr: #3d3d3d;
+  --bg-secondary-clr: #252525; */
 }
 
 
