--- a/css/edit.css
+++ b/css/edit.css
@@ -89,9 +89,10 @@ form {
     margin-top: 20px;
 }
 
-.container form input,
+.container form > input,
 select,
 textarea {
+    display: block;
     width: 100%;
     margin-top: 5px;
     margin-bottom: 15px;
