--- a/css/modal.css
+++ b/css/modal.css
@@ -36,6 +36,8 @@
 
 .image-detail img {
     width: 50%;
+    height: 500px;
+    object-fit: cover;
     border-radius: 10px;
 }
 
@@ -143,11 +145,13 @@
 
 @media screen and (max-width: 500px) {
     .modal-content {
-        margin: 20% auto;
+        margin: 10% auto;
         width: 90%;
     }
 
     .image-detail img {
         width: 100%;
+        height: 300px;
+        object-fit: cover;
     }
 }
