--- a/css/auth.css
+++ b/css/auth.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-    --primary-clr: #245953;
-    --bg-primary-clr: #3c3c3c;
-    --bg-secondary-clr: #2c2c2c;
-  }
+    --primary-clr: #e85900;
+    --primary-hover-clr: #bd4900;
+    --bg-primary-clr: #3d3d3d;
+    --bg-secondary-clr: #252525;
+}
 
 * {
     margin: 0;
@@ -61,7 +62,7 @@ form {
 
 .container button:hover {
     cursor: pointer;
-    background-color: #245953c4;
+    background-color: var(--primary-hover-clr);
 }
 
 .container p {
@@ -72,11 +73,11 @@ form {
 }
 
 .container p a {
-    color: #3e9e95;
+    color: var(--primary-clr);
 }
 
-.container p a:hover  {
-    color: #327c75;
+.container p a:hover {
+    color: var(--primary-hover-clr);
     text-decoration: underline;
 }
 
