--- a/css/modal.css
+++ b/css/modal.css
@@ -1,12 +1,13 @@
 :root {
-    --primary-color: #8B7E74;
-    --danger-color: #ab5151;
+    --danger-color: #aa4242;
     --info-color: #5177ab;
-    --bg-primary-color: #434242;
-    --bg-secondary-color: #242429;
-    /* --primary-color: #e85900;
+    /* --primary-color: #8B7E74; */
+    /* --bg-primary-color: #3c4646;
+    --bg-secondary-color: #2C3333; */
+    --primary-color: #e85900;
+    --primary-hover-color: #bd4900;
     --bg-primary-color: #3d3d3d;
-    --bg-secondary-color: #252525; */
+    --bg-secondary-color: #252525;
 }
 
 .modalDetail {
@@ -35,8 +36,8 @@
 }
 
 .image-detail img {
-    width: 50%;
-    height: 500px;
+    width: 60%;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -61,7 +62,7 @@
 
 .close-modal:hover,
 .close-modal:focus {
-    color: #888888;
+    color: var(--primary-hover-color);
     text-decoration: none;
     cursor: pointer;
 }
@@ -97,7 +98,7 @@
 /* modal footer component */
 
 .modal-footer {
-    padding: 10px 30px;
+    padding: 20px 30px;
     background-color: var(--bg-secondary-color);
     font-size: 20px;
     font-weight: 500;
@@ -140,6 +141,7 @@
 
     .image-detail img {
         width: 75%;
+        height: 200px;
     }
 }
 
@@ -151,7 +153,7 @@
 
     .image-detail img {
         width: 100%;
-        height: 300px;
+        height:200px;
         object-fit: cover;
     }
 }
